# qzxing

./: .gitignore  CMakeLists.txt
cmake/Hunter/: config.cmake
examples/: CMakeLists.txt
examples/BarcodeEncoder/: CMakeLists.txt
examples/QMLBarcodeScanner/: CMakeLists.txt  qmlcamera.cpp
examples/QQrDecoder/: CMakeLists.txt
examples/QZXingDragNDropTest/: CMakeLists.txt  main.cpp
examples/QZXingDragNDropTest/qmlapplicationviewer/: qmlapplicationviewer.cpp  qmlapplicationviewer.h
examples/QZXingLive/: CMakeLists.txt
src/: CameraImageWrapper.h  QZXing.cpp
src/zxing/: CMakeLists.txt
src/zxing/bigint/: CMakeLists.txt
src/zxing/zxing/: BarcodeFormat.cpp  BinaryBitmap.cpp  BinaryBitmap.h  ChecksumException.cpp  ChecksumException.h  DecodeHints.cpp  DecodeHints.h  EncodeHint.h  Exception.cpp  Exception.h  FormatException.cpp  FormatException.h  IllegalStateException.cpp  IllegalStateException.h  InvertedLuminanceSource.cpp  InvertedLuminanceSource.h  LuminanceSource.cpp  LuminanceSource.h  MultiFormatReader.cpp  MultiFormatReader.h  NotFoundException.cpp  NotFoundException.h  Reader.h  ReaderException.cpp  ReaderException.h  Result.cpp  Result.h  ResultMetadata.cpp  ResultPoint.h  ResultPointCallback.h  UnsupportedEncodingException.cpp  UnsupportedEncodingException.h  WriterException.cpp  WriterException.h
src/zxing/zxing/aztec/decoder/: AztecDecoder.cpp  Decoder.h
src/zxing/zxing/aztec/detector/: Detector.h
src/zxing/zxing/common/: Array.h  BitArray.cpp  BitArray.h  BitMatrix.cpp  BitMatrix.h  BitSource.h  CharacterSetECI.cpp  CharacterSetECI.h  DecoderResult.cpp  DecoderResult.h  DetectorResult.h  GlobalHistogramBinarizer.cpp  GlobalHistogramBinarizer.h  GreyscaleLuminanceSource.cpp  GreyscaleLuminanceSource.h  GreyscaleRotatedLuminanceSource.cpp  GreyscaleRotatedLuminanceSource.h  GridSampler.cpp  GridSampler.h  HybridBinarizer.cpp  HybridBinarizer.h  IllegalArgumentException.cpp  IllegalArgumentException.h  PerspectiveTransform.cpp  PerspectiveTransform.h  Str.cpp  Str.h  StringUtils.cpp  StringUtils.h  Types.h
src/zxing/zxing/common/detector/: MonochromeRectangleDetector.cpp  MonochromeRectangleDetector.h  WhiteRectangleDetector.cpp  WhiteRectangleDetector.h
src/zxing/zxing/common/reedsolomon/: GenericGF.cpp  GenericGF.h  GenericGFPoly.cpp  GenericGFPoly.h  ReedSolomonDecoder.h  ReedSolomonEncoder.cpp  ReedSolomonEncoder.h  ReedSolomonException.cpp  ReedSolomonException.h
src/zxing/zxing/datamatrix/: DataMatrixReader.h  DataMatrixVersion.cpp  Version.h
src/zxing/zxing/datamatrix/decoder/: BitMatrixParser.h  DataBlock.h  DataMatrixBitMatrixParser.cpp  DataMatrixDataBlock.cpp  DataMatrixDecodedBitStreamParser.cpp  DataMatrixDecoder.cpp  DecodedBitStreamParser.h  Decoder.h
src/zxing/zxing/datamatrix/detector/: CornerPoint.h  DataMatrixDetector.cpp  Detector.h  DetectorException.h
src/zxing/zxing/multi/: ByQuadrantReader.h  GenericMultipleBarcodeReader.h  MultipleBarcodeReader.h
src/zxing/zxing/multi/qrcode/: QRCodeMultiReader.h
src/zxing/zxing/multi/qrcode/detector/: MultiDetector.h  MultiFinderPatternFinder.cpp  MultiFinderPatternFinder.h
src/zxing/zxing/oned/: CodaBarReader.cpp  CodaBarReader.h  Code128Reader.cpp  Code128Reader.h  Code39Reader.cpp  Code39Reader.h  Code93Reader.cpp  Code93Reader.h  EAN13Reader.cpp  EAN13Reader.h  EAN8Reader.cpp  EAN8Reader.h  EANManufacturerOrgSupport.cpp  EANManufacturerOrgSupport.h  ITFReader.cpp  ITFReader.h  MultiFormatOneDReader.cpp  MultiFormatOneDReader.h  MultiFormatUPCEANReader.cpp  MultiFormatUPCEANReader.h  OneDReader.cpp  OneDReader.h  OneDResultPoint.h  UPCAReader.cpp  UPCAReader.h  UPCEANExtension2Support.cpp  UPCEANExtension2Support.h  UPCEANExtension5Support.cpp  UPCEANExtension5Support.h  UPCEANExtensionSupport.cpp  UPCEANExtensionSupport.h  UPCEANReader.cpp  UPCEANReader.h  UPCEReader.cpp  UPCEReader.h
src/zxing/zxing/oned/rss/: AbstractRSSReader.cpp  AbstractRSSReader.h  DataCharacter.h  FinderPattern.h  RSS14Reader.h
src/zxing/zxing/oned/rss/expanded/: BitArrayBuilder.h  ExpandedPair.h  RSSExpandedReader.h
src/zxing/zxing/oned/rss/expanded/decoders/: AI013103decoder.h  AI01320xDecoder.h  AI01392xDecoder.h  AI01393xDecoder.cpp  AI01393xDecoder.h  AI013x0x1xDecoder.h  AI013x0xDecoder.h  AI01AndOtherAIs.h  AI01decoder.h  AI01weightDecoder.h  AbstractExpandedDecoder.h  AnyAIDecoder.h  DecodedInformation.h  DecodedNumeric.h  FieldParser.h  GeneralAppIdDecoder.h
src/zxing/zxing/pdf417/: PDF417Reader.h
src/zxing/zxing/pdf417/decoder/: BitMatrixParser.h  DecodedBitStreamParser.h  Decoder.h  PDF417DecodedBitStreamParser.cpp
src/zxing/zxing/pdf417/decoder/ec/: ErrorCorrection.h  ModulusGF.h  ModulusPoly.cpp  ModulusPoly.h
src/zxing/zxing/pdf417/detector/: Detector.h  LinesSampler.cpp  LinesSampler.h  PDF417Detector.cpp
src/zxing/zxing/qrcode/: ErrorCorrectionLevel.h  FormatInformation.h  QRCodeReader.cpp  QRCodeReader.h  QRErrorCorrectionLevel.cpp  QRFormatInformation.cpp  QRVersion.cpp  Version.h
src/zxing/zxing/qrcode/decoder/: BitMatrixParser.h  DataBlock.h  DataMask.h  DecodedBitStreamParser.h  Decoder.h  Mode.h  QRBitMatrixParser.cpp  QRDataBlock.cpp  QRDataMask.cpp  QRDecodedBitStreamParser.cpp  QRDecoder.cpp  QRMode.cpp
src/zxing/zxing/qrcode/detector/: AlignmentPattern.h  AlignmentPatternFinder.h  Detector.h  FinderPattern.h  FinderPatternFinder.h  FinderPatternInfo.h  QRAlignmentPatternFinder.cpp  QRDetector.cpp  QRFinderPatternFinder.cpp
src/zxing/zxing/qrcode/encoder/: BlockPair.h  ByteMatrix.h  Encoder.h  MaskUtil.cpp  MatrixUtil.cpp  MatrixUtil.h  QRCode.h  QREncoder.cpp
tests/src/QZXingTests/: EncodeValidator.cpp  EncodeValidator.h  EncoderStressTest.h  TestCase.h
tests/src/QZXingTests/zxing/common/: BitArrayTests.h
tests/src/QZXingTests/zxing/common/reedsolomon/: ReedSolomonEncoderTests.h
tests/src/QZXingTests/zxing/qrcode/encoder/: EncoderTests.h  MaskUtilTests.cpp  MatrixUtilTests.cpp  QRCodeTests.cpp
